* commit 739329da30fe9d2478d69e5e00f421d2ac588b67
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 18:45:47 2014 -0400
| 
|     Added ability to do orientational averages about a principal axis by specifying a new argument '--rotation-axis=xaxis,yaxis,zaxis,none'. Brandon suggested that this might end up being useful for doing grain alignment. I also fixed the configure script, so that it should actually listen to FCFLAGS=... I updated the documentation to reflect the new input option.
|  
* commit e19fa0e482d39e5c4452c8607dc13f97f3df69a5
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 12:10:32 2014 -0400
| 
|     Divided write(0,*) grain_a into grain-axis-x,y,z because printing the array in the header bleeds into the next line, which is not commented out.
|  
* commit f5505a543e864dec66acdd5591a01046a2beca11
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 12:04:14 2014 -0400
| 
|     Added trim(adjustl()) to strings in the print_parameters function to reduce whitespace
|  
* commit 192e6154892a8dc5eed4ce85babeb607414bcdfd
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 11:53:55 2014 -0400
| 
|     Ooops, forgot to make changes to the Makefile.am in the last commit.
|  
* commit a628c5296eb7feeb08ac728d89338595ff9b0b74
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 11:49:43 2014 -0400
| 
|     Changed extension from to f95 to f90, since ifort doesnt seem to automatically recognize the f95 file extension. There might be some way to tell it to, but for now I'll take the coward's way out and just change the file extensions.
|  
* commit 203d9032cc72073dd50d76cf0fef723a51e47ceb
| Author: John Hoffman <jah5@princeton.edu>
| Date:   Fri Mar 28 11:28:40 2014 -0400
| 