@@ -1,4 +1,4 @@
-AC_INIT([ggadt], [0.9.84], [jah5@princeton.edu])
+AC_INIT([ggadt], [0.9.85], [jah5@princeton.edu])
 AC_PREREQ([2.63]) 
 #AC_CONFIG_MACRO_DIRS([m4])
 AC_CONFIG_SRCDIR([src/sphere.f90])
@@ -197,8 +197,6 @@ AC_RUN_IFELSE([
 AC_MSG_CHECKING([to see if Fortran supports getpid ])
 AC_RUN_IFELSE([
   		AC_LANG_PROGRAM([],	[[ 
-  								use, intrinsic :: iso_c_binding
-  								use, intrinsic :: iso_fortran_env
   								integer :: i
   								i = getpid() 
   							]]
@@ -207,34 +205,20 @@ AC_RUN_IFELSE([
   		AC_MSG_RESULT(no)
   	)
 
-# adds -pg compiler flag for using gprof
-#AC_ARG_ENABLE([profiling],
-#[  --enable-profiling    Add -pg compiler flag ],
-#[case "${enableval}" in
-#  yes) 
-#		FCFLAGSOLD=$FCFLAGS
-#		FCFLAGS="${FCFLAGS} -pg" 
-#		AC_MSG_CHECKING([ if compiler recognizes -pg ])
-#		AC_COMPILE_IFELSE([
-#  			AC_LANG_PROGRAM([],	[[ 
-#  									integer :: i 
-#  								]]
-#  				)],
-#  		AC_MSG_RESULT(yes), 
-#  		[	AC_MSG_RESULT(no) ; 
-#  			FCFLAGS=$FCFLAGSOLD ; 
-#  			AC_MSG_WARN([Your fortran compiler does not recognize the '-pg' tag. Ignoring --enable-profiling.]) 
-#  		]
-#  	)
-#	;;
-#  no)  ;;
-#  *) AC_MSG_ERROR([bad value ${enableval} for --enable-profiling]) ;;
-#esac],[])
+#check that random_number() is recognized
 
+AC_MSG_CHECKING([to see if Fortran supports random_number() ])
+AC_RUN_IFELSE([
+      AC_LANG_PROGRAM([], [[ 
+                  
+                  real, dimension(3) :: r
+                  call random_number(r)
 
-
-
-
+                ]]
+        )],
+      AC_MSG_RESULT(yes), 
+      [ AC_MSG_RESULT(no) ; AC_MSG_ERROR([Fortran compiler does not recognize random_number()]) ]
+    )
 
 USE_OMP_LIB=
 OMP_COMMENT=
@@ -250,28 +234,7 @@ then
 	AC_LANG(C)
 	AC_OPENMP
 	AC_CHECK_HEADERS([omp.h])
-#  if test $using_fftw3 = true
-#  then
-#  	AC_MSG_CHECKING([if we can use the lfftw3_threads library (in C)])
-#  	CFLAGSOLD=$CFLAGS
-#  	LIBSOLD=$LDFLAGS 
-#  	LIBS="${LIBS} -lfftw3_threads"
-#  	CFLAGS="${CFLAGSOLD} $OPENMP_CFLAGS"
-#
-#  	AC_RUN_IFELSE([
-#    		AC_LANG_PROGRAM([[
-#    							#include<omp.h>
-#    							#include<fftw3.h>
-#    						]], 
-#    						[[int main() 
-#    							{ fftw3_init_threads(); return 0; }
-#    						]]
-#    			)],
-#    		[ AC_MSG_RESULT(yes) ], 
-#    		[ AC_MSG_RESULT(no) ; LIBS=$LIBSOLD ; AC_MSG_ERROR([Cannot seem to use the lfftw3_threads library (in C)! Check config.log for more details.])]
-#    	)
-#  	CFLAGS=$CFLAGSOLD
-#  fi
+
 	AC_LANG([Fortran])
 	AC_OPENMP
 	AC_MSG_CHECKING([that we can utilize openmp in fortran])
@@ -349,7 +312,7 @@ AC_MSG_CHECKING([if Fortran compiler recognizes new_line('a')])
 AC_RUN_IFELSE([ 
   AC_LANG_PROGRAM([], 
             [[  
-               character(len=*) :: buf
+               character(len=10) :: buf
                buf = new_line('a')
                
             ]]
@@ -364,11 +327,6 @@ if test $newline_works = true
   else
     IF_NEWLINE="!"
 fi
-
-#FCFLAGS=$FCFLAGSOLD
-#FCFLAGS="${FCFLAGS} $OPENMP_FCFLAGS"
-
-
 
 if test $using_fftw3 = true
   then
