@@ -1,15 +1,15 @@
 <html lang="en">
 <head>
-<title>FFT comparison - GGADT 0.9.84</title>
+<title>FFT comparison - GGADT 0.9.85</title>
 <meta http-equiv="Content-Type" content="text/html">
-<meta name="description" content="GGADT 0.9.84">
+<meta name="description" content="GGADT 0.9.85">
 <meta name="generator" content="makeinfo 4.8">
 <link title="Top" rel="start" href="index.html#Top">
 <link rel="prev" href="Testing-against-previous-results.html#Testing-against-previous-results" title="Testing against previous results">
 <link rel="next" href="GNU-Free-Documentation-License.html#GNU-Free-Documentation-License" title="GNU Free Documentation License">
 <link href="http://www.gnu.org/software/texinfo/" rel="generator-home" title="Texinfo Homepage">
 <!--
-This manual is for GGADT (version 0.9.84, 29 March 2014),
+This manual is for GGADT (version 0.9.85, 29 March 2014),
 which calculates scattering properties of dust grains in the interstellar
 medium by using anomalous diffraction theory (ADT).
 
