@@ -1,15 +1,15 @@
 <html lang="en">
 <head>
-<title>Testing against previous results - GGADT 0.9.84</title>
+<title>Testing against previous results - GGADT 0.9.85</title>
 <meta http-equiv="Content-Type" content="text/html">
-<meta name="description" content="GGADT 0.9.84">
+<meta name="description" content="GGADT 0.9.85">
 <meta name="generator" content="makeinfo 4.8">
 <link title="Top" rel="start" href="index.html#Top">
 <link rel="prev" href="Example-usage.html#Example-usage" title="Example usage">
 <link rel="next" href="FFT-comparison.html#FFT-comparison" title="FFT comparison">
 <link href="http://www.gnu.org/software/texinfo/" rel="generator-home" title="Texinfo Homepage">
 <!--
-This manual is for GGADT (version 0.9.84, 29 March 2014),
+This manual is for GGADT (version 0.9.85, 29 March 2014),
 which calculates scattering properties of dust grains in the interstellar
 medium by using anomalous diffraction theory (ADT).
 
