@@ -1,13 +1,13 @@
 <html lang="en">
 <head>
-<title>GGADT 0.9.84</title>
+<title>GGADT 0.9.85</title>
 <meta http-equiv="Content-Type" content="text/html">
-<meta name="description" content="GGADT 0.9.84">
+<meta name="description" content="GGADT 0.9.85">
 <meta name="generator" content="makeinfo 4.8">
 <link title="Top" rel="start" href="#Top">
 <link href="http://www.gnu.org/software/texinfo/" rel="generator-home" title="Texinfo Homepage">
 <!--
-This manual is for GGADT (version 0.9.84, 29 March 2014),
+This manual is for GGADT (version 0.9.85, 29 March 2014),
 which calculates scattering properties of dust grains in the interstellar
 medium by using anomalous diffraction theory (ADT).
 
@@ -32,7 +32,7 @@ medium by using anomalous diffraction theory (ADT).
 --></style>
 </head>
 <body>
-<h1 class="settitle">GGADT 0.9.84</h1>
+<h1 class="settitle">GGADT 0.9.85</h1>
 <div class="contents">
 <h2>Table of Contents</h2>
 <ul>
@@ -114,7 +114,7 @@ Up:&nbsp;<a rel="up" accesskey="u" href="../index.html#dir">(dir)</a>
 
 <h2 class="unnumbered">GGADT</h2>
 
-<p>This manual is for GGADT (version 0.9.84, 29 March 2014),
+<p>This manual is for GGADT (version 0.9.85, 29 March 2014),
 which calculates scattering properties of dust grains in the interstellar
 medium by using anomalous diffraction theory (ADT).
 
