@@ -2,8 +2,6 @@
 
 set -x
 
-#make html || exit
-
 bash cleandist-custom.sh
 rm configure
 
@@ -12,7 +10,11 @@ git log --pretty --graph > ChangeLog
 aclocal -I./m4
 autoconf
 automake -a
-./configure FCFLAGS='-O3' || exit
-make || exit
+
+./configure || exit
 make html || exit
 cp doc/ggadt.html/* doc/htmldoc
+
+make clean
+
+make dist
